workspace = { members = ["aula008", "aula009", "aula011", "aula012", "aula014", "aula016", "aula027", "aula028", "aula029", "aula030", "aula031", "aula032"] }
[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
