workspace = { members = ["aula008", "aula009", "aula011", "aula012", "aula014", "aula016", "aula027", "aula028", "aula029", "aula030", "aula031", "aula032", "aula033", "aula035", "aula037", "aula039", "aula041", "aula051", "aula061", "aula063", "aula063a", "aula067", "aula069", "aula071", "aula078", "aula083", "aula085", "aula085a", "aula087", "aula087a", "aula091", "aula093", "aula094", "aula094a", "aula095", "aula097"] }
[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
